# radarscrap

./: .gitignore  CMakeLists.txt  CMakePresets.json  INSTALL  LICENSE  README.md  radarscraper.conf
SQL/: radarscraper.sql
include/: .gitignore  common.h  config.h  database.h  measure.h  parser.h  scraper.h  summary.h
src/: config.cpp  database.cpp  main.cpp  parser.cpp  scraper.cpp  summary.cpp
